; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/selinux/extr_hooks.c_cred_init_security.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/selinux/extr_hooks.c_cred_init_security.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.cred = type { %struct.task_security_struct* }
%struct.task_security_struct = type { i32, i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"SELinux:  Failed to initialize initial task.\0A\00", align 1
@SECINITSID_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cred_init_security to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cred_init_security() #0 {
  %1 = alloca %struct.cred*, align 8
  %2 = alloca %struct.task_security_struct*, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = inttoptr i64 %5 to %struct.cred*
  store %struct.cred* %6, %struct.cred** %1, align 8
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call %struct.task_security_struct* @kzalloc(i32 8, i32 %7)
  store %struct.task_security_struct* %8, %struct.task_security_struct** %2, align 8
  %9 = load %struct.task_security_struct*, %struct.task_security_struct** %2, align 8
  %10 = icmp ne %struct.task_security_struct* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %0
  %12 = call i32 @panic(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %0
  %14 = load i32, i32* @SECINITSID_KERNEL, align 4
  %15 = load %struct.task_security_struct*, %struct.task_security_struct** %2, align 8
  %16 = getelementptr inbounds %struct.task_security_struct, %struct.task_security_struct* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.task_security_struct*, %struct.task_security_struct** %2, align 8
  %18 = getelementptr inbounds %struct.task_security_struct, %struct.task_security_struct* %17, i32 0, i32 1
  store i32 %14, i32* %18, align 4
  %19 = load %struct.task_security_struct*, %struct.task_security_struct** %2, align 8
  %20 = load %struct.cred*, %struct.cred** %1, align 8
  %21 = getelementptr inbounds %struct.cred, %struct.cred* %20, i32 0, i32 0
  store %struct.task_security_struct* %19, %struct.task_security_struct** %21, align 8
  ret void
}

declare dso_local %struct.task_security_struct* @kzalloc(i32, i32) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
